Cancel timer based item removal for caches and counters
